# social_bias_framework

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  data_analysis.ipynb  debug.py  debug_eval.py  debug_train_gpt.py  eval.py  group-label-processor.pkl  minorities pre-processing.ipynb  notebook.ipynb  project.ipynb  pyproject.toml  temp.ipynb  test_gpt2_cls_head.py  test_models.ipynb  todo  train.py  train_no_wandb.py
config/: main.yaml
config/model/: bart.yaml  enc_dec.yaml  gpt2.yaml
data/aggregated/: test.pkl  validation.pkl
data/raw/: test.pkl  validation.pkl
debug/: train.py
kaggle_lib/config/: main.yaml
kaggle_lib/config/model/: gpt2.yaml
kaggle_lib/src/: analysis.py  evaluation.py  plot.py  text_similarity.py  train_utils.py
kaggle_lib/src/models/: __init__.py
kaggle_lib/src/models/bart/: helper.py  tokenization.py
kaggle_lib/src/models/gpt2/: helper.py  model.py
kaggle_library/: requirements.txt
kaggle_library/config/model/: gpt2.yaml
kaggle_library/src/: collators.py  dataset.py  evaluation.py  helper.py  processor.py  text_similarity.py  train_utils.py  utils.py
kaggle_library/src/models/: bart.py  gpt2.py
notebooks/: kaggle-train.ipynb
src/: analysis.py  collators.py  config.py  data.py  data_aggregator.py  dataset.py  dataset2.py  dataset_cls_head.py  dataset_prompt.py  evaluation.py  helper.py  logging.py  losses.py  model.py  model_utils.py  plot.py  preprocessing.py  processor.py  text_similarity.py  train_utils.py  train_utils_head.py  utils.py  utils_.py
src/models/: bart.py  gpt2.py  helper.py  tokenization.py
src/models/bart/: __init__.py  data_collator.py  helper.py  model.py  prediction.py  tokenization.py
src/models/gpt2/: __init__.py  data_collator.py  helper.py  logit_processor.py  model.py  prediction.py  tokenization.py
