[tool.poetry]
name = "social_bias_framework"
version = "0.1.0"
description = ""
authors = ["Simone Mele", "Matteo Periani", "Gian Marco Baroncini", "Giuseppe Mantineo"]

[tool.poetry.dependencies]
python = "^3.9"
omegaconf = "^2.3.0"
numpy = "^1.26.2"
transformers = "^4.35.2"
datasets = "^2.15.0"
accelerate = "^0.24.1"
wandb = "^0.16.0"
rouge = "^1.0.1"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
angle-emb = "^0.1.5"
emoji = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0"
ipykernel = "^6.27.1"
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10