[tool.poetry]
name = "social-bias-framework"
version = "0.1.0"
description = ""
authors = ["Simone Mele", "Matteo Periani", "Gian Marco Baroncini", "Giuseppe Mantineo"]

[tool.poetry.dependencies]
python = "^3.9"
omegaconf = "^2.3.0"
numpy = "^1.26.3"
transformers = "^4.36.2"
datasets = "^2.16.1"
accelerate = "^0.25.0"
wandb = "^0.16.1"
rouge = "^1.0.1"
scikit-learn = "^1.3.2"
seaborn = "^0.13.1"
angle-emb = "^0.1.6"
emoji = "^2.9.0"
nltk = "^3.8.1"
spacy = "^3.7.2"
gensim = "^4.3.2"
pot = "^0.9.2"
statsmodels = "^0.14.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ipykernel = "^6.28.0"
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
